add workflow dispatch

--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -1,9 +1,11 @@
-name: Example documentation
+name: Generate documentation
 
 on:
   push:
     branches:
       - main
+      
+  workflow_dispatch:
 
 jobs:
   # Build the documentation
