fix branch name, add workflow name

--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -1,9 +1,11 @@
+name: Generate documentation
+
 # Your GitHub workflow file under .github/workflows/
 # Trigger the action on push to main
 on:
     push:
       branches:
-        - main
+        - master
   
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
