deploy: f95fb42049a154ef69cda2e4fbe319887df95c6c

--- a/manifest.json
+++ b/manifest.json
@@ -230,12 +230,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Toc",
       "source_relative_path": "toc.yml",
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "qHauA4ROZ1I/ZaP99MRVj838VjQDLAIJfmTHjU2a0q0="
+          "hash": "wri3gQvFZvcTjhmqTsJtJaokPCcF7d3dv1ZZM5XTcBg="
         }
       },
       "is_incremental": false,
