--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -1,55 +1,75 @@
-name: Example documentation
+name: Generate documentation
 
 on:
   push:
     branches:
       - master
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    actions: read
+    pages: write
+    id-token: write
+    contents: write
+    repository-projects: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+    group: "pages"
+    cancel-in-progress: false
+    
 jobs:
-  # Build the documentation
-  build:
-    runs-on: windows-latest # Required by DocFX
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        # with:
-        #   submodules: true
-
-      - name: Install DocFX
-        run: choco install -y docfx
-
-      - name: Use README.md as index.md
-        run: cp README.md Documentation/index.md
-
-      - name: Build
-        run: docfx Documentation/docfx.json
-
-      # Upload the generated documentation
-      - name: Upload site artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: _site
-          path: Documentation/_site # Must equals the 'build.dest' value on your docfx.json
-
-  # Deploy the generated documentation to the gh-pages branch
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        # with:
-        #   submodules: true
 
-      # Download the generated documentation
-      - name: Download site artifact
-        uses: actions/download-artifact@v1
+      - name: Generate Documentation
+        uses: nunit/docfx-action@v2.4.0
         with:
-          name: _site
-
+            args: Documentation/docfx.json
+        
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: _site
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./Documentation/_site
+
+#   build:
+#     runs-on: windows-latest
+#     steps:
+#         - name: Checkout
+#           uses: actions/checkout@v3
+
+#         - name: Update DocFX
+#           run: dotnet tool update -g docfx
+
+#         - name: Build documentation
+#           run: docfx Documentation/docfx.json
+
+#         - name: Upload artifact
+#           uses: actions/upload-artifact@v3
+#           with:
+#             name: _site
+#             path: Documentation/_site/
+#             if-no-files-found: error
+
+#   deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v3
+
+#     - name: Download artifact
+#       uses: actions/download-artifact/@v3
+#       with: 
+#         name: _site
+        
+#     - name: Deploy
+#       uses: peaceiris/actions-gh-pages@v3
+#       with:
+#         github_token: ${{ secrets.GITHUB_TOKEN }}
+#         publish_branch: gh-pages
