--- a/manifest.json
+++ b/manifest.json
@@ -163,6 +163,16 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/logo.svg",
+      "output": {
+        "resource": {
+          "relative_path": "images/logo.svg"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/unity_gaze_interactable.png",
       "output": {
         "resource": {
