deploy: 2df16af3b1de004fbf0796df30296751d3e2c8f9

--- a/manifest.json
+++ b/manifest.json
@@ -173,6 +173,16 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/unity_gaze_interaction_system.mp4",
+      "output": {
+        "resource": {
+          "relative_path": "images/unity_gaze_interaction_system.mp4"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/unity_gaze_interactor.png",
       "output": {
         "resource": {
