--- a/manifest.json
+++ b/manifest.json
@@ -132,6 +132,9 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "docs/getting-started.md",
       "output": {
